--- a/src/main/java/logic/Presentacion/ConsultaActividad.form
+++ b/src/main/java/logic/Presentacion/ConsultaActividad.form
@@ -86,7 +86,7 @@
         <Component class="javax.swing.JTable" name="jTableListaActividad">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;    },&#xa;    new String [] {&#xa;        &quot;Nickname&quot;, &quot;Nombre&quot;, &quot;Apellido&quot;, &quot;Email&quot;,&quot;Fecha de Nacimiento&quot;&#xa;    }&#xa;){&#xa;            @Override&#xa;            public boolean isCellEditable(int row, int column) {&#xa;                return false; // Make all cells non-editable&#xa;            }}" type="code"/>
+              <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;    },&#xa;    new String [] {&#xa;        &quot;Nombre&quot;, &quot;Descripcion&quot;, &quot;Duracion&quot;, &quot;Costo&quot;,&quot;Fecha de Registro&quot;&#xa;    }&#xa;){&#xa;            @Override&#xa;            public boolean isCellEditable(int row, int column) {&#xa;                return false; // Make all cells non-editable&#xa;            }}" type="code"/>
             </Property>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
