--- a/src/main/java/logic/Presentacion/ConsultaUsuario.form
+++ b/src/main/java/logic/Presentacion/ConsultaUsuario.form
@@ -40,11 +40,14 @@
                   </Group>
                   <Component id="jScrollPane2" alignment="0" pref="392" max="32767" attributes="0"/>
                   <Component id="jScrollPaneConsultaUsuario" alignment="0" pref="0" max="32767" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="LabelClasesAsociadas" min="-2" max="-2" attributes="0"/>
+                  <Component id="jScrollPane3" alignment="1" pref="392" max="32767" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="LabelClasesAsociadas" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="LabelActividadesAsociadas" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
-                  <Component id="jScrollPane3" alignment="1" pref="392" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -64,7 +67,9 @@
               <Component id="LabelClasesAsociadas" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
               <Component id="jScrollPane2" min="-2" pref="88" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="LabelActividadesAsociadas" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
               <Component id="jScrollPane3" min="-2" pref="88" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
               <Component id="jButtonCancelarConsultaUsuario" min="-2" max="-2" attributes="0"/>
@@ -146,7 +151,6 @@
     <Component class="javax.swing.JLabel" name="LabelClasesAsociadas">
       <Properties>
         <Property name="text" type="java.lang.String" value="Clases Asociadas:"/>
-        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane3">
@@ -176,5 +180,10 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JLabel" name="LabelActividadesAsociadas">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Actividades Asociadas:"/>
+      </Properties>
+    </Component>
   </SubComponents>
 </Form>
