--- a/src/main/java/logic/Presentacion/ConsultaDictadoClase.form
+++ b/src/main/java/logic/Presentacion/ConsultaDictadoClase.form
@@ -107,6 +107,9 @@
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jComboBoxInstitucionesDictadoFocusGained"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
